fix z-index + translate3d issues on Android

--- a/src/packages/common/css/_components/_navbar.scss
+++ b/src/packages/common/css/_components/_navbar.scss
@@ -33,13 +33,10 @@
   overflow: visible;
   color: $navbarText;
   position: relative;
-  z-index: 200;
 
   &.container {
     // max-width: $navMaxWidth;
   }
-
-  -webkit-transform: translate3d(0, 0, 0); // fix janky text
 
   // Prevent floats from breaking the navbar
   @include clearfix();
@@ -90,12 +87,16 @@
 
   .nav-li-favorites .nav-li-link:hover i {
     color:$buttonOrangeHover;
+    // .lt-ie9 & {
+    //   color:$white;
+    // }
   }
   .nav-li-universal .nav-li-linkBtn {
     .fonticon-10-arrowhead-up {
       margin-left: 4px;
       position: relative;
       top:-1px;
+      -webkit-transform: translate3d(0,0,0); // make the icon show up on Android
     }
   }
 
@@ -200,9 +201,10 @@
 // -----------------------------------------
 
 .navbar-outer {
-  background-color: $navbarBackground;
+  background: $navbarBackground;
   position: relative;
   z-index: 222;
+  -webkit-transform: translate3d(0,0,0);
 }
 .nav-wrapper{
   z-index: $zindexGlobalNav;
@@ -265,12 +267,13 @@
   color:$navbarLinkColor;
 
   .fonticon-10-arrowhead-down {
-      position: relative;
-      top:-2px;
-      margin-bottom: -5px;
-      margin-left: px-em(4);
-      margin-right:-2px;
-      overflow: hidden;
+    position: relative;
+    top:-2px;
+    margin-bottom: -5px;
+    margin-left: px-em(4);
+    margin-right:-2px;
+    overflow: hidden;
+    -webkit-transform: translate3d(0,0,0); // make the icon show up on Android
   }
 }
 
@@ -357,6 +360,7 @@
 .nav-li-cart .nav-li-link {
   padding: 9px 9px 0 8px;
   font-size: 1em;
+  -webkit-transform: translate3d(0,0,0); // make the icon show up on Android
   i {
     position: relative;
     top:-1px;
